--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,13 +1,55 @@
 .login {
 	margin-left: auto;
 	margin-right: auto;
-	padding-top: 400px;
+	padding-bottom: 100px;
 }
 
 .chat {
-	margin-left: auto;
-	margin-right: auto;
-	padding-top: 200px;
-	width: 600px;
-	height: 600px;
+	height: 100%;
+	margin: 0 auto;
+	min-width: 800px;
+	max-width: 1000px;
+}
+
+.chat-room {
+	height: 400px;
+	overflow: auto;
+	background-color: RGB(238, 238, 238);
+}
+
+.onlineuser {
+	background-color: RGB(238, 238, 238);
+	margin-right: 10px;
+}
+ul {
+	margin: 0px;
+}
+
+.sure {
+	height: 20px;
+	margin-top: 30px;
+}
+
+.message {
+	font-weight: bold;
+	padding: 5px;
+}
+
+.submit {
+	background-color: #D0D0D0;
+}
+
+.onlineuser {
+	padding: 0;
+	margin: 0;
+	border: 1px solid black;
+}
+
+.content {
+	width: 100%;
+	height: 100%;
+}
+
+.tool {
+	height: 10px;
 }
