--- a/public/partials/chat.html
+++ b/public/partials/chat.html
@@ -1,11 +1,11 @@
-<div layout="row" class="chat">
+<div layout="row" class="chat" ng-cloak>
 	<md-content flex="30" class="onlineuser">
 		<md-toolbar layout="row" class="md-hue-1 tool">
 			<div class="md-toolbar-tools">
 				<span>在线用户</span>
 			</div>
 		</md-toolbar>
-		<md-content class="chat-room">
+		<md-content>
 			<md-list flex>
 				<md-list-item class="md-1-line" ng-repeat="user in allUsers" ng-if="user!=nickname" ng-click="chatwith(user)">
 					<img ng-src="img/1.jpg" class="md-avatar" ng-if="user!=nickname"/>
